--- a/login.html
+++ b/login.html
@@ -4,9 +4,21 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Sign In</title>
     </head>
     <body>
-        
+        <h1>Hello :)</h1>
+        <h2>Sign In</h2>
+        <form>
+            <label for="femail">    
+                <input type="email" name="email" placeholder="Email" required>
+            </label>
+            <label for="fpass">
+                <input type="password" name="password" placeholder="Password" required>
+            </label>
+            <input type="submit" name="login" value="Sign In">
+        </form>
+        <a href="register.html">Doesn't have an account? Register here!</a>
+        <script src="login.js"></script>
     </body>
 </html>
