--- a/register.html
+++ b/register.html
@@ -4,9 +4,28 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Register</title>
     </head>
     <body>
-        
+        <h1>Hello :)</h1>
+        <h2>Create an account</h2>
+        <form>
+            <label for="femail">    
+                <input type="email" name="email" placeholder="Email" required>
+            </label>    
+            <label for="fname"> 
+                <input type="text" name="fullname" placeholder="Full Name" required>
+            </label>   
+            <label for="fpass">
+                <input type="password" name="password" placeholder="Password" required>
+            </label>
+            <label for="fpass">
+                <input type="password" name="cpassword" placeholder="Confirm Password"required>
+            </label>
+            <input type="reset" name="reset" value="Reset">
+            <input type="submit" name="submit" value="Submit">  
+        </form>
+        <a href="login.html">Already registered? Log in here!</a>
+        <script src="register.js"></script>
     </body>
 </html>
