--- a/login.html
+++ b/login.html
@@ -5,21 +5,23 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Sign In</title>
     </head>
     <body>
-        <h1>Hello :)</h1>
-        <h2>Sign In</h2>
-        <form>
-            <label for="femail">    
-                <input type="email" name="email" placeholder="Email" required>
-            </label>
-            <label for="fpass">
-                <input type="password" name="password" placeholder="Password" required>
-            </label>
-            <input type="submit" name="login" value="Sign In">
-        </form>
-        <a href="register.html">Doesn't have an account? Register here!</a>
-        <script src="login.js"></script>
+        <div class="page">
+            <h1>Hello :)</h1>
+            <h2>Sign In</h2>
+            <form>
+                <label for="femail">Email</label>    
+                    <input type="email" name="email" placeholder="Email" required>
+                <label for="fpass">Password</label>
+                    <input type="password" name="password" placeholder="Password" required>
+                <input type="submit" name="login" value="Sign In">
+            </form>
+            <a href="register.html">Doesn't have an account? Register here!</a>
+            <script src="login.js"></script>
+        </div>
     </body>
+
 </html>
