--- a/login.html
+++ b/login.html
@@ -10,15 +10,23 @@
     </head>
     <body>
         <div class="page">
-            <h1>Hello :)</h1>
-            <h2>Sign In</h2>
-            <form>
-                <label for="femail">Email</label>    
-                    <input type="email" name="email" placeholder="Email" required>
-                <label for="fpass">Password</label>
-                    <input type="password" name="password" placeholder="Password" required>
-                <input type="submit" name="login" value="Sign In">
-            </form>
+            <header>
+                <h1>Hello :)</h1>
+            </header>    
+            <div class="form-container">
+                <h2>Sign In</h2>
+                <form>
+                    <div class="email">
+                        <label for="femail">Email</label>    
+                        <input type="email" name="email" placeholder="Email" required>
+                    </div>
+                    <div class="pass">    
+                        <label for="fpass">Password</label>
+                        <input type="password" name="password" placeholder="Password" required>
+                    </div>    
+                    <input type="submit" name="signin" value="Sign In">
+                </form>
+            </div>
             <a href="register.html">Doesn't have an account? Register here!</a>
             <script src="login.js"></script>
         </div>
