Fix script tag bug

--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                 </form>
             </div>
             <a href="register.html">Doesn't have an account? Register here!</a>
-            <script src="login.js"></script>
+            <script src="js/login.js"></script>
         </div>
     </body>
 
