--- a/register.html
+++ b/register.html
@@ -39,7 +39,7 @@
                 </form>
             </div>    
             <a href="login.html">Already registered? Log in here!</a>
-            <script src="register.js"></script>
+            <script src="js/register.js"></script>
         </div>    
         </body>
 </html>
