Add forms validations

--- a/login.html
+++ b/login.html
@@ -24,7 +24,9 @@
                         <label for="fpass">Password</label>
                         <input type="password" name="password" placeholder="Password" required>
                     </div>    
-                    <input type="submit" name="signin" value="Sign In">
+                    <input type="submit" name="signin" value="Sign In" onclick="validate()">
+                    <div id="validationDiv">
+                    </div>
                 </form>
             </div>
             <a href="register.html">Doesn't have an account? Register here!</a>
