--- a/login.html
+++ b/login.html
@@ -24,14 +24,15 @@
                         <label for="fpass">Password</label>
                         <input type="password" name="password" placeholder="Password" required>
                     </div>    
-                    <input type="submit" name="signin" value="Sign In" onclick="validate()">
-                    <div id="validationDiv">
-                    </div>
-                </form>
+                    <input class="button" type="submit" name="signin" value="Sign In" onclick="validate()">
+                </form>   
             </div>
             <a href="register.html">Doesn't have an account? Register here!</a>
+            <div id="validationDiv">
+                <ul id="#myList">
+                </ul>
+            </div>
             <script src="js/login.js"></script>
         </div>
     </body>
-
 </html>
