--- a/login.html
+++ b/login.html
@@ -18,21 +18,21 @@
                 <form>
                     <div class="email">
                         <label for="femail">Email</label>    
-                        <input type="email" name="email" placeholder="Email" required>
+                        <input type="email" name="email" class="reqE" placeholder="Email" required>
                     </div>
                     <div class="pass">    
                         <label for="fpass">Password</label>
-                        <input type="password" name="password" placeholder="Password" required>
+                        <input type="password" name="password" class="reqP" placeholder="Password" required>
                     </div>    
                     <input class="button" type="submit" name="signin" value="Sign In" onclick="validate()">
                 </form>   
             </div>
             <a href="register.html">Doesn't have an account? Register here!</a>
             <div id="validationDiv">
-                <ul id="#myList">
+                <ul id="myList">
                 </ul>
             </div>
-            <script src="js/login.js"></script>
         </div>
+        <script src="js/login.js"></script>
     </body>
 </html>
