--- a/register.html
+++ b/register.html
@@ -18,25 +18,27 @@
                 <form>
                     <div class="email">
                         <label for="femail">Email</label>   
-                        <input type="email" name="email" placeholder="Email" required>
+                        <input type="email" name="email" class="reqE" placeholder="Email" required>
                     </div>
                     <div class="full-name">
                         <label for="fname">Full Name</label>
-                        <input type="text" name="fullname" placeholder="Full Name" required>
+                        <input type="text" name="fullname" placeholder="Full Name" class="reqFN" required>
                     </div>
                     <div class="pass">
                         <label for="fpass">Password</label>
-                        <input type="password" name="password" placeholder="Password" required>
+                        <input type="password" name="password" class="reqP" placeholder="Password" required>
                     </div>
                     <div class="c-password">
                         <label for="fpass">Confirm Password</label>
-                        <input type="password" name="c-password" placeholder="Confirm Password"required>
+                        <input type="password" name="c-password" class="reqConfPass" placeholder="Confirm Password"required>
                     </div>    
                     <div class="buttons">
-                        <input type="reset" name="reset" value="Reset">
-                        <input type="submit" name="submit" value="Submit" onclick="validate()">  
+                        <input type="reset" name="reset" class="b-reset" value="Reset">
+                        <input type="submit" name="submit" value="Submit" class="b-submit" onclick="validate()">  
                     </div>
                     <div id="validationDiv">
+                        <ul id="myList">
+                        </ul>
                     </div>
                 </form>
             </div>    
