--- a/login.html
+++ b/login.html
@@ -17,11 +17,11 @@
                 <h2>Sign In</h2>
                 <form>
                     <div class="email">
-                        <label for="femail">Email</label>    
+                        <label for="email">Email</label>    
                         <input type="email" name="email" class="reqE" placeholder="Email" required>
                     </div>
                     <div class="pass">    
-                        <label for="fpass">Password</label>
+                        <label for="password">Password</label>
                         <input type="password" name="password" class="reqP" placeholder="Password" required>
                     </div>    
                     <input class="button" type="submit" name="signin" value="Sign In" onclick="validate()">
