--- a/register.html
+++ b/register.html
@@ -17,20 +17,20 @@
                 <h2>Create an account</h2>
                 <form>
                     <div class="email">
-                        <label for="femail">Email</label>   
+                        <label for="email">Email</label>   
                         <input type="email" name="email" class="reqE" placeholder="Email" required>
                     </div>
                     <div class="full-name">
-                        <label for="fname">Full Name</label>
+                        <label for="fullname">Full Name</label>
                         <input type="text" name="fullname" placeholder="Full Name" class="reqFN" required>
                     </div>
                     <div class="pass">
-                        <label for="fpass">Password</label>
+                        <label for="password">Password</label>
                         <input type="password" name="password" class="reqP" placeholder="Password" required>
                     </div>
                     <div class="c-password">
-                        <label for="fpass">Confirm Password</label>
-                        <input type="password" name="c-password" class="reqConfPass" placeholder="Confirm Password"required>
+                        <label for="c-password">Confirm Password</label>
+                        <input type="password" name="c-password" class="reqConfPass" placeholder="Confirm Password" required>
                     </div>    
                     <div class="buttons">
                         <input type="reset" name="reset" class="b-reset" value="Reset">
@@ -45,5 +45,5 @@
             <a href="login.html">Already registered? Log in here!</a>
         </div>    
         <script src="js/register.js"></script>
-        </body>
+    </body>
 </html>
