--- a/login.html
+++ b/login.html
@@ -25,8 +25,8 @@
                         <input type="password" name="password" class="reqP" placeholder="Password" required>
                     </div>    
                     <input class="button" type="submit" name="signin" value="Sign In" onclick="validate()">
-                    <div id="validationDiv">
-                        <ul id="myList">
+                    <div class="validationDiv">
+                        <ul class="myList">
                         </ul>
                     </div>
                 </form>   
