--- a/register.html
+++ b/register.html
@@ -36,8 +36,8 @@
                         <input type="reset" name="reset" class="b-reset" value="Reset">
                         <input type="submit" name="submit" value="Submit" class="b-submit" onclick="validate()">  
                     </div>
-                    <div id="validationDiv">
-                        <ul id="myList">
+                    <div class="validationDiv">
+                        <ul class="myList">
                         </ul>
                     </div>
                 </form>
