Add password validation

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
                 <form>
                     <div class="email">
                         <label for="email">Email</label>    
-                        <input id="email" type="email" name="email" class="reqE" placeholder="Email" required>
+                        <input type="email" name="email" class="reqE" placeholder="Email" required>
                     </div>
                     <div class="pass">    
                         <label for="password">Password</label>
@@ -32,6 +32,6 @@
             <a href="register.html">Doesn't have an account? Register here!</a>
         </div>
         <script src="js/login.js"></script>
-        <script src="js/validations-week-10.js"></script>
+        <script src="js/inputs-value-validations.js"></script>
     </body>
 </html>
