Add password validations

--- a/register.html
+++ b/register.html
@@ -43,5 +43,6 @@
             <a href="login.html">Already registered? Log in here!</a>
         </div>    
         <script src="js/register.js"></script>
+        <script src="js/inputs-value-validations.js"></script>
     </body>
 </html>
