Add full name validations

--- a/register.html
+++ b/register.html
@@ -43,6 +43,7 @@
             <a href="login.html">Already registered? Log in here!</a>
         </div>    
         <script src="js/register.js"></script>
-        <script src="js/inputs-value-validations.js"></script>
+        <script src="js/events-handlers.js"></script>
+        <script src="js/events-handlers-register.js"></script>
     </body>
 </html>
