Validate email & pass entered and show them

--- a/login.html
+++ b/login.html
@@ -32,6 +32,6 @@
             <a href="register.html">Doesn't have an account? Register here!</a>
         </div>
         <script src="js/login.js"></script>
-        <script src="js/inputs-value-validations.js"></script>
+        <script src="js/events-handlers.js"></script>
     </body>
 </html>
