Fix inputs alignment

--- a/login.html
+++ b/login.html
@@ -22,9 +22,11 @@
                     </div>
                     <div class="pass">    
                         <label for="password">Password</label>
-                        <input type="password" name="password" class="reqP" placeholder="Password" required>
-                    </div>    
-                    <input class="button" type="submit" name="signin" value="Sign In" onclick="validate()">
+                        <input type="password" name="password" class="reqP" placeholder="Password" required>   
+                    </div>
+                    <div class="button">
+                        <input class="b-submit" type="submit" name="signin" value="Sign In" onclick="validate()">
+                    </div>
                     <div class="validationDiv">
                     </div>
                 </form>
