--- a/register.html
+++ b/register.html
@@ -20,17 +20,17 @@
                         <label for="email">Email</label>   
                         <input type="email" name="email" class="reqE" placeholder="Email" required>
                     </div>
-                    <div class="full-name">
+                    <div class="fullName">
                         <label for="fullname">Full Name</label>
-                        <input type="text" name="fullname" placeholder="Full Name" class="reqFN" required>
+                        <input type="text" name="fullName" placeholder="Full Name" class="reqFN" required>
                     </div>
                     <div class="pass">
                         <label for="password">Password</label>
                         <input type="password" name="password" class="reqP" placeholder="Password" required>
                     </div>
-                    <div class="c-password">
+                    <div class="cPassword">
                         <label for="c-password">Confirm Password</label>
-                        <input type="password" name="c-password" class="reqConfPass" placeholder="Confirm Password" required>
+                        <input type="password" name="cPassword" class="reqConfPass" placeholder="Confirm Password" required>
                     </div>    
                     <div class="buttons">
                         <input type="reset" name="reset" class="b-reset" value="Reset">
