--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
                     </div>    
                     <div class="buttons">
                         <input type="reset" name="reset" class="b-reset" value="Reset">
-                        <input type="submit" name="submit" value="Submit" class="b-submit" onclick="validate()">  
+                        <input type="submit" name="submit" value="Register" class="b-submit" onclick="validate()">  
                     </div>
                     <div class="validationDiv">
                     </div>
